# controller/room.js
@@ -22,7 +22,7 @@ exports.createRoom = async (req, res) => {
       )
       .then(async (result) => {
         let accessToken = result.data.data.accessToken;
-        const URI = `${process.env.thinmoo}/sqRoom/extapi/add?accessToken=${accessToken}&extCommunityUuid=${company_uuid}&buildingUuid=${room_buildingUuid}&name=${room_name}&code=${code}&uuid=${room_uuid}`;
+        const URI = `${process.env.thinmoo}/sqRoom/extapi/add?accessToken=${accessToken}&extCommunityUuid=${company_uuid}&buildingId=${room_buildingUuid}&name=${room_name}&code=${code}&uuid=${room_uuid}`;
         const encodedURI = encodeURI(URI);
         await axios
           .post(
@@ -61,7 +61,7 @@ exports.getRoom = async (req, res) => {
           let accessToken = result.data.data.accessToken;
           await axios
             .get(
-              `${process.env.thinmoo}/sqRoom/extapi/list?accessToken=${accessToken}&extCommunityUuid=${company_uuid}`
+              `${process.env.thinmoo}/sqRoom/extapi/list?accessToken=${accessToken}&extCommunityUuid=${company_uuid}&pageSize=1000`
             )
             .then(async (result) => {
               let coludresult = result.data;
@@ -101,3 +101,32 @@ exports.deleteroom = async (req, res) => {
   });
 };
 
+exports.getoneRoom = async (req, res) => {
+  let company_id = req.params.company_id;
+  let uuids = req.params.uuids
+  let getbuild = `select * from company where company_id = ${company_id}`;
+  db.query(getbuild, async (err, result) => {
+    if (err) {
+      console.log(err);
+    }
+    if (result) {
+      let company_uuid = result[0].company_uuid;
+  
+      await axios
+        .get(
+          `${process.env.thinmoo}/platCompany/extapi/getAccessToken?appId=7ba40b7c8f88492aa8afe5aad19fc0a4&appSecret=7cd85e69b6a18e62985f463fa67c4088`
+        )
+        .then(async (result) => {
+          let accessToken = result.data.data.accessToken;
+          await axios
+            .get(
+              `${process.env.thinmoo}/sqRoom/extapi/get?accessToken=${accessToken}&extCommunityUuid=${company_uuid}&uuid=${uuids}`
+            )
+            .then(async (result) => {
+              let coludresult = result.data;
+              res.send(coludresult);
+            });
+        });
+    }
+  });
+};
