# routes/room.js
@@ -3,5 +3,6 @@ module.exports = function (app) {
     app.post('/createRoom/:company_id',room.createRoom)
     app.get('/getRoom/:company_id',room.getRoom)
     app.delete('/deleteroom/:company_id/:uuids',room.deleteroom)
-
+    app.get('/getoneRoom/:company_id/:uuids',room.getoneRoom)
+    
 }
